# medical-ai-agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-runtime-scaffold-and-process-topology.md  1-2-case-lifecycle-and-stable-identity-model.md  1-3-environment-secret-and-runtime-profile-handling.md  1-4-internal-api-and-role-separated-runtime-boundaries.md  1-4-role-separation-и-access-foundation.md  1-5-core-error-contract-for-recoverable-failures.md  1-5-handoff-readiness-gate-и-shared-status-view.md  1-6-audit-events-и-case-scoped-artifacts-foundation.md  2-1-start-intake-through-patient-bot.md  2-2-ai-boundary-explanation-and-explicit-consent.md  2-2-ai-boundary-explanation-перед-consent.md  2-3-consent-record-for-operational-intake.md  2-3-explicit-consent-capture.md  2-3-review-prompt-edge-case-hunter.md  2-4-profile-and-consultation-goal-capture-with-anonymized-default.md  2-4-сбор-patient-profile-и-consultation-goal.md  2-5-patient-facing-case-status.md  2-5-patient-status-and-deletion-control.md  3-1-document-upload-and-processing-dispatch.md  3-1-document-upload-в-active-case.md  3-2-supported-file-validation-and-recoverable-rejection.md  3-3-operational-ocr-provider-boundary.md  (+45 more)
app/: __init__.py  main.py
docs/: architecture-diagram.md
scripts/: __init__.py  run_minimal_eval_suite.py  seed_demo_case.py  seed_knowledge_base.py  seed_operational_verification_case.py  setup_qdrant_collections.py  verify_startup.py
tests/: test_runtime_topology.py
(+189 files in other folders)
